customise page and add new variables

--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,7 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        try_files $uri /index.html;
     }
 
     sub_filter_once off;
@@ -16,6 +16,9 @@ server {
     sub_filter 'server_url' '$request_uri';
     sub_filter 'server_date' '$time_local';
     sub_filter 'request_id' '$request_id';
+    sub_filter 'request_method' '$request_method';
+    sub_filter 'remote_addr' '$remote_addr';
+    sub_filter 'remote_port' '$remote_port';
 
     #error_page  404              /404.html;
 
